# BISECT

./: .ci-test  .ci-verified  .gitattributes  .gitignore  BOARD-REVISION-PLAN-track-B.md  BOARD-REVISION-PLAN-track-F.md  CLAUDE.md  Cargo.toml  FINISH_DPI.sh  README.md  UNIFICATION_STATUS.md  bootstrap.bat  bootstrap.sh  compile_artifacts.bat  deploy_web.bat  fix_ohio_2020.bat  repo-map.toml  requirements.txt  run_2010_redownload.bat  run_parallel.bat  run_redistricting.bat  run_sequential.bat  setup_data.py  setup_env.bat
.claude/: settings.local.json
.github/workflows/: ci.yml  shared-kernels.yml  test_pipeline.yml  verify.yml
.roles/: ROLE.md  canvass.md  tally.md  vault.md
batch/: run_redistricting.bat  run_test.bat
configs/: official_proposal.yml
context/: SKILLS.md
context/waves/: BACKFILL.md  PHASES.md  README.md
crates/bisect-analysis/: Cargo.toml
crates/bisect-cli/: Cargo.toml  build.rs  whitelist_dependencies.json
crates/bisect-cli/examples/: capacity_path100_benchmark_package.rs  flow_path100_benchmark_package.rs  generate_import_label_shapefile_fixture.rs  regionalization_path100_benchmark_package.rs  spectral_grid10_benchmark_package.rs  spectral_path6_package.rs  u16_branch_cut_path8_benchmark_package.rs  u20_audit_grid10_benchmark_package.rs
crates/bisect-cli/src/: adjacency_loader.rs  aggregate.rs  algo_config.rs  analyze.rs  analyze_label.rs  args.rs  bisection_runner.rs  build_cmd.rs  civic.rs  compare.rs  demographics.rs  depo.rs  doctor.rs  edge_weights.rs  ensemble.rs  exact_cmd.rs  export_cmd.rs  fetch.rs  fletch.rs  geometry.rs  geosection_orientation.rs  housing.rs  housing_evidence.rs  ilp_audit.rs  import_cmd.rs  import_label.rs  improve_cmd.rs  integration_pipeline_tests.rs  label.rs  label_cmd.rs  lib.rs  lodes.rs  lodes_evidence.rs  main.rs  map_cmd.rs  migrate.rs  output.rs  paper_mode.rs  pareto_cmd.rs  partisan.rs  (+17 more)
crates/bisect-cli/tests/: bloc_voting_l1.rs  compare_narrative_l1.rs  spec7_pipeline_l2.rs
crates/bisect-clustering/: Cargo.toml
crates/bisect-clustering/src/: assign.rs  fixtures.rs  lib.rs  metrics.rs  output.rs  regionalization.rs  repair.rs  seeds.rs
crates/bisect-clustering/tests/: l0_capacity.rs  l0_regionalization.rs  l1_repair_audit.rs  l1_summary.rs
crates/bisect-column/: Cargo.toml
crates/bisect-column/src/: lib.rs  master.rs  output.rs  pricing.rs  solver.rs
crates/bisect-column/tests/: l0_pricing_master.rs
crates/bisect-ensemble/: Cargo.toml
crates/bisect-ensemble/src/: chain.rs  evidence_manifest.rs  forest_recom.rs  lib.rs  merge_split.rs  parallel_tempering.rs  recom.rs  search_evidence.rs  short_burst_evidence.rs  spanning.rs  vra_recom.rs
crates/bisect-ensemble/src/fixtures/g_ensemble/active-smoke/: manifest.json  metrics.json  trace.json
crates/bisect-ensemble/src/fixtures/g_ensemble/bad-hash/: manifest.json
crates/bisect-ensemble/tests/: ensemble_l1.rs  ensemble_l2.rs
crates/bisect-flow/: Cargo.toml
crates/bisect-flow/src/: lib.rs
crates/bisect-ilp/: Cargo.toml
crates/bisect-ilp/src/: certificates.rs  connectivity_cuts.rs  formulation.rs  lib.rs  lp.rs  output.rs  result.rs  separation.rs  solver.rs
crates/bisect-multiscale/: Cargo.toml
crates/bisect-multiscale/src/: adaptive_evidence.rs  chain.rs  hierarchy.rs  lib.rs  rebalance.rs  resolution_evidence.rs  seeds.rs
crates/bisect-multiscale/tests/: L0_unit.rs
crates/bisect-pareto/: Cargo.toml
crates/bisect-pareto/src/: algorithm.rs  audit.rs  crossover.rs  dominance.rs  lib.rs  mutation.rs  objectives.rs  output.rs  seeds.rs
crates/bisect-pareto/tests/: L0_unit.rs  L1_integration.rs
crates/bisect-smc/: Cargo.toml
crates/bisect-smc/src/: algorithm.rs  lib.rs  output.rs  partial_plan.rs  proposal.rs  resample.rs  seeds.rs
crates/bisect-smc/tests/: L1_integration.rs  L2_real.rs
crates/bisect-tui/: Cargo.toml
crates/bisect-tui/src/: app.rs  integration_tests.rs  lib.rs  main.rs  plans.rs  runner.rs  session.rs
crates/bisect-tui/src/screens/: compare.rs  doctor.rs  home.rs  mod.rs  run.rs  verify.rs
crates/bisect-tui/src/widgets/: command_palette.rs  error_banner.rs  glossary.rs  mod.rs  status_bar.rs
crates/rcount-district/: Cargo.toml
crates/rcount-district/examples/: district_aggregation_rplan.rs
crates/rcount-district/src/: lib.rs
crates/rcount-io/: Cargo.toml
crates/rcount-io/src/: lib.rs
crates/rctx-core/: Cargo.toml
crates/rctx-core/src/: lib.rs
crates/rgraph-core/: Cargo.toml
crates/rgraph-core/src/: lib.rs
crates/rgraph-core/tests/: l1_crop_retrieval_wins.rs  l1_paths_centrality.rs  l2_graph_stress.rs
crates/rhist-cli/: Cargo.toml
crates/rhist-cli/src/: main.rs
crates/rhist-cli/tests/: verify_cli.rs
crates/rhist-core/: Cargo.toml
crates/rhist-core/src/: lib.rs
crates/rhist-io/: Cargo.toml
crates/rhist-io/examples/: refresh_fixture_hashes.rs
crates/rhist-io/src/: lib.rs
data/: README.md
docs/: ARCHITECTURE.md  BISECT_CLI.md  CHANGELOG.md  CODING_PATTERNS.md  CONTRIBUTING.md  DATA_FORMATS.md  DEPENDENCIES.md  ENHANCEMENTS_2026.md  ENHANCEMENT_CORNER_ADJACENCY_FILTER.md  GETTING_STARTED.md  NEXT_SESSION.md  PAPERS.md  PIPELINE_OUTPUTS.md  README.md  REDIST_CLI.md  REPO_MAP_STANDARD.md  REPRODUCIBLE_BUILD.md  SKILLS.md  TROUBLESHOOTING.md  error-conventions.md
docs/vtrace/: CONOPS.md  (+29 more)
notebooks/: 01_quickstart.ipynb  02_parameter_sweep.ipynb  03_callais_evidence.ipynb  04_gerrychain_interop.ipynb  05_mcmc_ensemble.ipynb  README.md
paper/: compile.bat  compile.sh  paper.bbl  paper.out  references.bib
papers/: compile.bat
presentations/: compile.bat
python/bisect_py/: Cargo.toml  pyproject.toml
python/bisect_py/src/: lib.rs
research/: README.md
scripts/: b10_multiseed.ps1  b10_pareto_figure.py  b10_sweep.ps1  b11_pfr_multiseed.ps1  b11_pfr_sweep.ps1  b7_deepen.ps1  b7_rebuild_csv.ps1  b7_sweep.ps1  b8_sweep.ps1  build_metis_windows.bat  fetch_cps_turnout.py  fetch_dod_overseas.py  fetch_ipeds.py  fetch_vest.py  fetch_voteview.py  geosection_ratio_probe.py
tests/: conftest.py
tools/: repo_map.py
web/: dashboard.html  master_dashboard.html
(+3187 files in other folders)
