[package]
name = "bisect-clustering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Capacity-constrained clustering construction algorithms for redistricting"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
