[package]
name = "bisect-column"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Column-generation and branch-and-price contracts for exact redistricting"

[dependencies]
rgraph-core = { path = "../rgraph-core" }
rplan-audit = { path = "../rplan-audit" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
