[package]
name = "bisect-ilp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Exact redistricting via Integer Linear Programming — generates MPS/LP files (U.6)"

[dependencies]
rgraph-core = { path = "../rgraph-core" }
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
