[package]
name = "bisect-multiscale"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-scale MCMC redistricting — hierarchical mixing for large-k states (G.11)"

[dependencies]
bisect-ensemble = { path = "../bisect-ensemble" }
rgraph-core = { path = "../rgraph-core" }
ropt-core = { path = "../ropt-core" }
rand.workspace = true
sha2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
