[package]
name = "bisect-smc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sequential Monte Carlo redistricting — calibrated weighted plan sampling (G.7)"

[dependencies]
bisect-ensemble = { path = "../bisect-ensemble" }
rgraph-core = { path = "../rgraph-core" }
ropt-core = { path = "../ropt-core" }
rand.workspace = true
sha2.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# no extra dev deps needed
