[package]
name = "bisect-tui"
version = "0.1.0"
edition = "2021"
authors = ["Gio Della-Libera"]
description = "Interactive TUI for the bisect redistricting CLI"

[[bin]]
name = "bisect-tui"
path = "src/main.rs"

[dependencies]
bisect-cli   = { path = "../bisect-cli" }
bisect-report = { path = "../bisect-report" }
ratatui      = "0.28"
crossterm    = { version = "0.28", features = ["event-stream"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
anyhow       = "1"

[dev-dependencies]
tempfile = "3"
