[package]
name = "rcount-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RCOUNT package directory read/write helpers"

[dependencies]
rcount-core = { path = "../rcount-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
