[package]
name = "rhist-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RHIST command-line verifier"

[[bin]]
name = "rhist"
path = "src/main.rs"

[dependencies]
rhist-core = { path = "../rhist-core" }
rhist-io = { path = "../rhist-io" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
