[package]
name = "rhist-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RHIST unit-history data model and core lineage verifier"

[dependencies]
rctx-core = { path = "../rctx-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
