[package]
name = "rhist-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RHIST package directory read/write helpers"

[dependencies]
rhist-core = { path = "../rhist-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
